# PoKiTT

./: .gitlab-ci.yml  CMakeLists.txt  Doxyfile  FindCantera.cmake  LICENSE  PoKiTTConfig.cmake.in  PoKiTTDoxygen.txt  PoKiTTVersion.h.in  README.md
examples/ReactionDiffusion/: CMakeLists.txt  EnthalpyRHS.h  EnthalpyTransport.h  HeatFlux.h  MassFractions.h  RxnDiffExample.cpp  SpeciesDiffusion.h  SpeciesRHS.h  SpeciesTransport.h  TagManager.h
pokitt/: CMakeLists.txt  CanteraObjects.cpp  CanteraObjects.h  MassToMoleFracs.h  MixtureFraction.cpp  MixtureFraction.h  MixtureFractionExpr.h  MixtureMolWeight.h  MixtureMoleWeightExpr.h  MoleToMassFracs.h  SpecFromMixfrac.h  SpeciesN.h  SpecificToVolumetric.h  VolumetricToSpecific.h
pokitt/DensitySolve/: DensityCalculator_Species.cc  DensityCalculator_Species.h  JacobianElements.cc  JacobianElements.h  wasatch_defs.h
pokitt/kinetics/: AnalyticalJacobian.h  CMakeLists.txt  ReactionInfo.cpp  ReactionInfo.h  ReactionRates.h
pokitt/thermo/: CMakeLists.txt  Density.h  Enthalpy.h  HeatCapacity_Cp.h  HeatCapacity_Cv.h  InternalEnergy.h  Pressure.h  SpecificVol.h  Temperature.h  TemperaturePowers.h
pokitt/transformations/: CMakeLists.txt  ConservedPrimitive.h  PTYPrimitive.h
pokitt/transport/: CMakeLists.txt  DiffusionCoeffMix.h  HeatFlux.h  SpeciesDiffusion.h  ThermalCondMix.h  ViscosityMix.h
src/: CanteraObjects.h
src/kinetics/: ReactionRates.h
src/thermo/: Enthalpy.h  HeatCapacity_Cp.h  Temperature.h  TemperaturePowers.h
src/transport/: DiffusionCoeffMix.h  ThermalCondMix.h  ViscosityMix.h
test/: AnalyticalJacobian_test.cpp  CMakeLists.txt  DensitySolveTest.cpp  Density_test.cpp  DiffusionCoeff_test.cpp  EnthalpySensitivity_test.cpp  Enthalpy_test.cpp  HeatCapacityCpSensitivity_test.cpp  HeatCapacity_Cp_test.cpp  HeatCapacity_Cv_test.cpp  IdealGasSensitivity_test.cpp  IdealGas_test.cpp  LinearMassFracs.h  MixtureMolWeightSensitivity_test.cpp  ReactionRates_test.cpp  TemperatureFromE0Sensitivity_test.cpp  TemperaturePowers.h  TemperatureSensitivity_test.cpp  Temperature_test.cpp  ThermalCondMixSensitivity_test.cpp  ThermalCondMix_test.cpp  Thermo_test.cpp  Transformations_test.cpp  Transport_test.cpp  ViscosityMix_test.cpp  elements.yaml  ethanol.xml  ethanol.yaml  gri30.xml  gri30.yaml  h2-burke.yaml  h2_oconn.xml  h2o2.yaml  make_yaml.sh  meoh_c1.xml  methanol.xml  methanol.yaml  mixfracTest.cpp  poly_tester.xml  poly_tester.yaml  (+3 more)
